@@ -113,8 +113,8 @@ function getContextFromRequest(req, conf, type) {
  * Extract appropriate `{transaction,error}.context.response` from an HTTP
  * response object. This handles header redaction according to the agent config.
  *
- * @param {Object} res - Typically `res` is a Node.js `http.OutgoingMessage`
- *    (https://nodejs.org/api/http.html#class-httpoutgoingmessage).
+ * @param {Object} res - Typically `res` is a Node.js `http.ServerResponse`
+ *    (https://nodejs.org/api/http.html#class-httpserverresponse).
  *    However, some cases (e.g. Lambda and Azure Functions instrumentation)
  *    create a pseudo-res object that matches well enough for this function.
  *    Some relevant fields: (TODO: document all used fields)
