@@ -122,7 +122,11 @@ See the <<upgrade-to-v4>> guide.
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
-// To see the changelog for later 3.x release, see the "3.x" branch: <https://github.com/elastic/apm-agent-nodejs/blob/3.x/CHANGELOG.asciidoc>
+NOTE: "3.x" releases are now maintenance releases.
+See https://www.elastic.co/guide/en/apm/agent/nodejs/3.x/release-notes-3.x.html[the 3.x release notes in the "3.x" branch]
+for the most recent 3.x releases. The 3.x branch will be maintained until
+2024-03-07 (6 months after the 4.0.0 release).
+
 
 [[release-notes-3.49.1]]
 ==== 3.49.1 - 2023/08/09
